# qobuz-dl

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
artifacts/: uvx-default-dd.md  uvx-default-explorer.md  uvx-default-implementation.md
artifacts/audit/2026-06-22-fsst-n1-codebase-audit/: area-evidence-table.md  criteria.md  issue-bulk-api-limit-throttling.md  issue-ci-action-sha-pinning.md  issue-local-secret-file-permissions.md  issue-login-credential-query-exposure.md  issue-qobuz-api-compliance-boundary.md  issue-stale-research-doc.md  issue-windows-appdata-startup-risk.md  issue-windows-reserved-filename-gap.md  overview.md  verification-log.md
artifacts/dependency-hardening/: final-validation-rerun.md  final-validation.md  implementation-handoff.md  independent-dd.md  scope-pass.md
artifacts/scenario-evaluation/: 2026-06-20-qobuz-dl-capability-scenarios.md
artifacts/sdlc/2026-05-26-dependency-hardening-phase-2/: acceptance-criteria.md  completion-audit.md  dd-code-review.md  dd-scope-validation.md  implementation-delegate.md  post-repair-code-review.md  post-repair-validation.md  repair-delegate.md  scope-explorer.md
artifacts/subagents/: dependency-hardening-dd-correctness.md  dependency-hardening-dd-validation.md  dependency-hardening-explorer.md  dependency-hardening-impl.md  dependency-hardening-repair.md  dependency-hardening-second-pass-docs.md  dependency-hardening-second-pass-explorer.md
docs/: INDEX.md  cli.md  dependencies.md  development.md  examples.md  installation.md  module-usage.md  packaging.md  testing.md  use-cases.md
docs/feat/2026-05-26-dependency-hardening/: impl-plan-phase-1-dependency-hardening.md  impl-plan-phases-4-6-dependency-hardening.md
docs/feat/2026-05-26-qobuz-api-direction/: vision-qobuz-api-direction.md
docs/feat/2026-06-22-bandwidth-limit/: vision-bandwidth-limit.md
docs/feat/2026-06-22-bandwidth-limit-vision/: vision-bandwidth-limit.md
docs/research/: go-qobuz-reference.md  local-project-capabilities.md  qobuz-official-api.md
docs/sdlc/2026-05-26-dependency-hardening/: architecture-dependency-hardening.md  impl-plan-phase-2-dependency-hardening.md  impl-plan-phase-3-dependency-hardening.md  vision-dependency-hardening.md
qobuz_dl/: __init__.py  bundle.py  cli.py  color.py  commands.py  core.py  db.py  downloader.py  exceptions.py  http.py  metadata.py  qopy.py  sanitize.py  utils.py
tests/: test_bundle_downloader_characterization.py  test_commands.py  test_core_regressions.py  test_db.py  test_download_execution_characterization.py  test_duplicate_tracking.py  test_http.py  test_imports.py  test_lastfm_characterization.py  test_metadata_characterization.py  test_qopy_characterization.py  test_sanitization_characterization.py  test_terminal_interactive_characterization.py
tests/fixtures/: lastfm_empty_playlist.html  lastfm_playlist.html
