[build-system]
# Keep the backend range compatible with the current license metadata table
# while package metadata remains centralized in pyproject.toml.
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qobuz-dl"
version = "1.0.0"
description = "The complete Lossless and Hi-Res music downloader for Qobuz"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Vitiko", email = "vhnz98@gmail.com" },
]
keywords = ["qobuz", "music", "downloader", "flac", "hi-res", "lossless"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
  "mutagen>=1.47,<2",
]

[project.urls]
Homepage = "https://github.com/pascalandy/qobuz-dl"
Repository = "https://github.com/pascalandy/qobuz-dl"
Changelog = "https://github.com/pascalandy/qobuz-dl/blob/master/CHANGELOG.md"
Upstream = "https://github.com/vitiko98/Qobuz-DL"

[project.scripts]
qobuz-dl = "qobuz_dl:main"
qdl = "qobuz_dl:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.12.0",
]

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["qobuz_dl*"]
